fixed the overlapping issue of carousel

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -2,7 +2,7 @@
   .pic-ctn {
     width: 100vw;
     height: 200px;
-
+    margin-bottom: 20rem;
   }
   .cimg{
    width: 50%;
